@@ -10,6 +10,9 @@ Unreleased changes (0.8.1)
     
  3. NUTCH-344 - Fix for thread blocking issue (Greg Kim via siren)
 
+ 4. Optionally skip pages with abnormally large Crawl-Delay values
+    (Dennis Kubes via ab)
+
 Release 0.8 - 2006-07-25
 
  0. Totally new architecture, based on hadoop
